fix: navbar-height (overlapped first vote)

--- a/src/app/mode-toggle/mode-toggle.component.css
+++ b/src/app/mode-toggle/mode-toggle.component.css
@@ -1,6 +1,5 @@
 .container-toggle{
-  transform: scale(0.5);
-  margin-bottom: 30px;
+  transform: scale(0.5) translateY(-80px);
 }
 
 .toggle-btn-container span {
